Run org.openrewrite.java.UseStaticImport: methodPattern: org.junit.Assert *(..)